dev/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: nginx-dev.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-service
            port:
              number: 80
